syntax = "proto3";
package proto;
option go_package = "./proto";

import "generic.proto";

service CategoryService {
    rpc Create(CreateCategoryRequest) returns(StatusResponse){};
    rpc Edit(EditCategoryRequest) returns(StatusResponse){};
    rpc List(Id) returns(CategoryListResponse){};
    rpc Delete(Id) returns(StatusResponse){};
}

message CategoryDetails {
    int64 id_category = 1;
    string title = 2;
}

message CategoryListResponse {
    repeated CategoryDetails category_list= 1;
}

message CreateCategoryRequest {
    string title = 1;
}

message EditCategoryRequest {
    string title = 1;
}